refactor: replace get(0) with getFirst() for improved readability in tests